  * doc/po/de.po:
    - updated german manpage translation by Chris Leick, thanks!
  * apt-pkg/packagemanager.cc:
    - do not run into loop on new-pre-depends-breaks (Closes: #673536)
  * doc/*.xml:
    - add a few translator notes and reword some paragraphs to ensure that
      translators and users alike can better understand them (Closes: #669409)

  [ Raphael Geissert ]
  * apt-pkg/acquire*.cc:
    - handle redirections in the worker with the right method instead of
      in the method the redirection occured in (Closes: #668111)
  * methods/http.cc:
    - forbid redirects to change protocol
  * methods/mirror.cc:
    - generate an equal sign also for the first arch (Closes: #669142)


  [ Marius Vollmer ]
  * apt-pkg/algorithms.cc:
    - fix memory leak of Flags in pkgSimulate by a proper destructor

 -- David Kalnischkies <kalnischkies@gmail.com>  Fri, 11 May 2012 23:26:59 +0200

apt (0.9.3) unstable; urgency=low

  [ David Kalnischkies ]
  * apt-pkg/contrib/strutl.cc:
    - remove the message size limit from ioprintf and strprintf
  * apt-pkg/contrib/configuration.cc:
    - add a more versatile Dump() method
    - normalize a bit by replacing // and /./ with / in FindFile
    - /dev/null is a special absolute path as it has no subdirectories
  * apt-pkg/acquire-worker.cc:
    - use Dump() to generate the configuration message for sending
  * cmdline/apt-config.cc:
    - make it possible to limit dump to a subtree
    - implement --empty and --format option for dump
  * apt-pkg/cdrom.cc:
    - use Dump() to generate the configuration output
  * apt-pkg/depcache.cc:
    - clearly separate 'positive' and 'negative' dependencies and
      their upgrade-resolution tries in MarkInstall and especially don't
      treat Conflicts differently compared to Breaks here
    - provider is only a possible solution if the provides has the right
      version (or none as we have no versioned provides in debian) and not
      if the version of the provider matches