@@ -38,6 +38,9 @@ apt (0.9.4) UNRELEASED; urgency=low
   * doc/*.xml:
     - add a few translator notes and reword some paragraphs to ensure that
       translators and users alike can better understand them (Closes: #669409)
+  * apt-pkg/aptconfiguration.cc:
+    - longcode Translation files are saved with encoded underscore,
+      so make sure to pick these files up as well for Acquire::Languages
 
   [ Raphael Geissert ]
   * apt-pkg/acquire*.cc:
